--- a/.gitignore
+++ b/.gitignore
@@ -3,6 +3,15 @@ __pycache__/
 *.py[cod]
 *$py.class
 
+# Manually added by me
+/.idea
+*.pyc
+
+.pytest_cache
+.coverage
+
+src/.pytest_cache
+
 # C extensions
 *.so
 
